--- a/pages/task-2.html
+++ b/pages/task-2.html
@@ -13,7 +13,21 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
-    <div class="content">
+    <header>
+        <div class="content">
+            <div class="logo">
+                <a href="../index.html">
+                    <img width="50px" src="../assets/img/logo-white.png" alt="FT">
+                </a>
+            </div>
+            <div class="tasks">
+                <a class="button-1" href="task-1.html">Task 1</a>
+                <a class="button-1 active" href="">Task 2</a>
+                <a class="button-1" href="https://fedotick.github.io/CV/" target="_blank" rel="noopener noreferrer">Task 3</a>
+            </div>
+        </div>
+    </header>
+    <div class="content center">
         <div class="program-list">
             <div class="tv-image-container">
                 <img class="tv-image" src="../assets/img/task-1/tv.png" alt="TV">
@@ -72,5 +86,17 @@
             </div>
         </div>        
     </div>
+    <footer>
+        <div class="content center">
+            <div class="links">
+                <a href="https://github.com/fedotick" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/img/social-media-icons/github-white.png" alt="GitHub">
+                </a>
+                <a href="https://www.linkedin.com/in/fe-dot/" target="_blank" rel="noopener noreferrer">
+                    <img src="../assets/img/social-media-icons/linkedin-white.png" alt="LinkedIn">
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
