--- a/pages/task-2.html
+++ b/pages/task-2.html
@@ -41,7 +41,7 @@
                     <span class="material-symbols-outlined">eyeglasses</span>
                 </div>
                 <div class="line-container">
-                    <div class="soli-line"></div>
+                    <div class="soli-line width-36"></div>
                     <div class="dotted-line"></div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <span class="material-symbols-outlined">water_drop</span>
                 </div>
                 <div class="line-container">
-                    <div class="soli-line"></div>
+                    <div class="soli-line width-34"></div>
                     <div class="dotted-line"></div>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                     <span class="material-symbols-outlined">eyeglasses</span>
                 </div>
                 <div class="line-container">
-                    <div class="soli-line"></div>
+                    <div class="soli-line width-36"></div>
                     <div class="dotted-line"></div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     <span class="material-symbols-outlined">eyeglasses</span>
                 </div>
                 <div class="line-container">
-                    <div class="soli-line"></div>
+                    <div class="soli-line width-72"></div>
                     <div class="dotted-line"></div>
                 </div>
             </div>
